--- a/src/predict.ipynb
+++ b/src/predict.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4  35.66  1571  136.21   2  13  3  199   91          NaN  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4   85   5/6  16.97  7.19  14.1  4  2          NaN  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "4     1  3 (1ct 2st)  0.7190000000000001          NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "4  14.1  4  2  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "[1672 rows x 16 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
        "[1141 rows x 14 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,108 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Here, we will take the example of a fantasy cricket game. You can create two teams out of the players available, and based on the combined feature score of all the players of a team, our statistical model will try to predict which team will win."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create v1 of our result predictor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_batting_score(batting_df: pd.DataFrame, batsmen: list) -> float:\n",
+    "    score = 0\n",
+    "    for bat in batsmen:\n",
+    "        try:\n",
+    "            mask = batting_df['Player'].values == bat\n",
+    "            player = batting_df.loc[mask].iloc[0]\n",
+    "            player_score = player[\"Runs\"] * (player[\"Runs\"] / player[\"Inns\"]) * player[\"SR\"]\n",
+    "            score += player_score\n",
+    "        except:\n",
+    "            print(bat)\n",
+    "    return score        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_bowling_score(bowling_df: pd.DataFrame, bowlers: list) -> float:\n",
+    "    score = 0\n",
+    "    for bow in bowlers:\n",
+    "        try:\n",
+    "            mask = bowling_df['Player'].values == bow\n",
+    "            player = bowling_df.loc[mask].iloc[0]\n",
+    "            player_score = player[\"Runs\"] / player[\"Overs\"] * player[\"Wkts\"] * player[\"Econ\"]\n",
+    "            score += player_score\n",
+    "        except:\n",
+    "            print(bow)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_winner(team_1: dict, team_2: dict, batting_df: pd.DataFrame, bowling_df: pd.DataFrame):\n",
+    "    \n",
+    "    # calculating combined feature score for team 1\n",
+    "    score_1 = 0\n",
+    "    batsmen_1, bowlers_1 = team_1[\"batsmen\"], team_1[\"bowlers\"]\n",
+    "    score_1 += calculate_batting_score(batting_df, batsmen_1)\n",
+    "    score_1 += calculate_bowling_score(bowling_df, bowlers_1)  \n",
+    "    \n",
+    "    # calculating combined feature score for team 2\n",
+    "    score_2 = 0\n",
+    "    batsmen_2, bowlers_2 = team_2[\"batsmen\"], team_2[\"bowlers\"]\n",
+    "    score_2 += calculate_batting_score(batting_df, batsmen_2)\n",
+    "    score_2 += calculate_bowling_score(bowling_df, bowlers_2)\n",
+    "\n",
+    "    # calculating probabilities\n",
+    "    probab_1 = score_1 / (score_1 + score_2) * 100\n",
+    "    probab_2 = 100 - probab_1\n",
+    "    \n",
+    "    print(f\"Probability of win: TEAM1({probab_1}):TEAM2({probab_2})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of win: TEAM1(63.896382603139315):TEAM2(36.103617396860685)\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_1 = {\n",
+    "    \"batsmen\":['V Kohli', 'RG Sharma', 'MJ Guptill', 'Shoaib Malik', 'BB McCullum', 'DA Warner'],\n",
+    "    \"bowlers\":['SL Malinga', 'Shahid Afridi', 'Shakib Al Hasan', 'Saeed Ajmal'],\n",
+    "}\n",
+    "\n",
+    "team_2 = {\n",
+    "    \"batsmen\":['Tamim Iqbal', 'MN Samuels', 'SK Raina', 'GJ Maxwell', 'Shakib Al Hasan', 'C Munro'],\n",
+    "    \"bowlers\":['Mohammad Hafeez', 'Sohail Tanvir', 'RE van der Merwe', 'WB Rankin'],\n",
+    "}\n",
+    "\n",
+    "predict_winner(team_1, team_2, batting_df, bowling_df)"
+   ]
   }
  ],
  "metadata": {
